* Load file into nlohmann::json structure

--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -77,6 +77,12 @@ table td
     </table>
      <table>
 <tr>
+  <td class="dependency">{&quot;symbol&quot;=&gt;&quot;ifstream&quot;, &quot;headers&quot;=&gt;[&quot;fstream&quot;]}</td>
+</tr>
+<tr>
+  <td class="dependency">{&quot;symbol&quot;=&gt;&quot;nlohmann::json&quot;, &quot;headers&quot;=&gt;[&quot;lib/nlohmann/json.hpp&quot;]}</td>
+</tr>
+<tr>
   <td class="dependency">{&quot;symbol&quot;=&gt;&quot;AllegroFlare::BitmapBin*&quot;, &quot;headers&quot;=&gt;[&quot;AllegroFlare/BitmapBin.hpp&quot;]}</td>
 </tr>
 <tr>
@@ -136,6 +142,12 @@ table td
 <h1>Dependents</h1>
 <pre>
 {
+  "ifstream": [
+    "Tileo/TMJMeshLoader"
+  ],
+  "nlohmann/json": [
+    "Tileo/TMJMeshLoader"
+  ],
   "AllegroFlare/BitmapBin": [
     "Tileo/TMJMeshLoader"
   ],
