* Add #bitmap_atlas_filename# property in TMJMeshLoader; Remove hard-coded string

--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -69,6 +69,10 @@ table td
   <td class="property">filename</td>
   <td class="property">std::string</td>
 </tr>
+<tr>
+  <td class="property">bitmap_atlas_filename</td>
+  <td class="property">std::string</td>
+</tr>
     </table>
      <table>
 <tr>
