* Rename #tmx_width# #tmx_height# to #num_columns# and #num_rows#

--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -63,11 +63,11 @@ table td
   <td class="property">std::string</td>
 </tr>
 <tr>
-  <td class="property">tmx_width</td>
+  <td class="property">num_columns</td>
   <td class="property">int</td>
 </tr>
 <tr>
-  <td class="property">tmx_height</td>
+  <td class="property">num_rows</td>
   <td class="property">int</td>
 </tr>
 <tr>
