* Rename properties to #layer_num_rows#, #layer_num_columns#

--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -79,11 +79,11 @@ table td
   <td class="property">int</td>
 </tr>
 <tr>
-  <td class="property">tilelayer_width</td>
+  <td class="property">layer_num_columns</td>
   <td class="property">int</td>
 </tr>
 <tr>
-  <td class="property">tilelayer_height</td>
+  <td class="property">layer_num_rows</td>
   <td class="property">int</td>
 </tr>
 <tr>
