* Add explicit getters for #num_columns#, #num_rows#, #tile_width#, #tile_height#

--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -71,11 +71,11 @@ table td
   <td class="property">int</td>
 </tr>
 <tr>
-  <td class="property">tmx_tilewidth</td>
+  <td class="property">tile_width</td>
   <td class="property">int</td>
 </tr>
 <tr>
-  <td class="property">tmx_tileheight</td>
+  <td class="property">tile_height</td>
   <td class="property">int</td>
 </tr>
 <tr>
@@ -87,7 +87,7 @@ table td
   <td class="property">int</td>
 </tr>
 <tr>
-  <td class="property">tiles</td>
+  <td class="property">layer_tile_data</td>
   <td class="property">std::vector&lt;int&gt;</td>
 </tr>
 <tr>
@@ -96,6 +96,18 @@ table td
 </tr>
     </table>
      <table>
+<tr>
+  <td class="method">get_num_columns()</td>
+</tr>
+<tr>
+  <td class="method">get_num_rows()</td>
+</tr>
+<tr>
+  <td class="method">get_tile_width()</td>
+</tr>
+<tr>
+  <td class="method">get_tile_height()</td>
+</tr>
 <tr>
   <td class="method">load()</td>
 </tr>
