* Add explicit getters for last three properties; Use fancy new #getter: explicit# feature

--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -109,6 +109,15 @@ table td
   <td class="method">get_tile_height()</td>
 </tr>
 <tr>
+  <td class="method">get_layer_num_columns()</td>
+</tr>
+<tr>
+  <td class="method">get_layer_num_rows()</td>
+</tr>
+<tr>
+  <td class="method">get_layer_tile_data()</td>
+</tr>
+<tr>
   <td class="method">load()</td>
 </tr>
     </table>
