* Use TMJDataLoader in TMJMeshLoader

--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -227,6 +227,9 @@ table td
 <tr>
   <td class="dependency">{&quot;symbol&quot;=&gt;&quot;Tileo::TileAtlasBuilder&quot;, &quot;headers&quot;=&gt;[&quot;Tileo/TileAtlasBuilder.hpp&quot;]}</td>
 </tr>
+<tr>
+  <td class="dependency">{&quot;symbol&quot;=&gt;&quot;Tileo::TMJDataLoader&quot;, &quot;headers&quot;=&gt;[&quot;Tileo/TMJDataLoader.hpp&quot;]}</td>
+</tr>
     </table>
   </div>
 </ul>
@@ -307,6 +310,9 @@ table td
     "Tileo/TMJMeshLoader"
   ],
   "Tileo/TileAtlasBuilder": [
+    "Tileo/TMJMeshLoader"
+  ],
+  "Tileo/TMJDataLoader": [
     "Tileo/TMJMeshLoader"
   ],
   "ALLEGRO_BITMAP": [
