Clean up generated code from TMJDataLoader

--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -166,20 +166,20 @@ table td
     <h3 id="quintessence/Tileo/TMJMeshLoader.q.yml">quintessence/Tileo/TMJMeshLoader.q.yml</h3>
      <table>
 <tr>
+  <td class="property">BITMAP_ATLAS_FILENAME</td>
+  <td class="property">std::string</td>
+</tr>
+<tr>
   <td class="property">bitmap_bin</td>
   <td class="property">AllegroFlare::BitmapBin*</td>
 </tr>
 <tr>
+  <td class="property">tmj_filename</td>
+  <td class="property">std::string</td>
+</tr>
+<tr>
   <td class="property">tile_atlas</td>
   <td class="property">Tileo::Atlas*</td>
-</tr>
-<tr>
-  <td class="property">filename</td>
-  <td class="property">std::string</td>
-</tr>
-<tr>
-  <td class="property">bitmap_atlas_filename</td>
-  <td class="property">std::string</td>
 </tr>
 <tr>
   <td class="property">mesh</td>
@@ -195,6 +195,9 @@ table td
 </tr>
     </table>
      <table>
+<tr>
+  <td class="method">get_tile_atlas()</td>
+</tr>
 <tr>
   <td class="method">get_mesh()</td>
 </tr>
