* Add test for #destroy#; Rename #destructed# to #destroyed#

--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -307,7 +307,7 @@ table td
   <td class="property">bool</td>
 </tr>
 <tr>
-  <td class="property">destructed</td>
+  <td class="property">destroyed</td>
   <td class="property">bool</td>
 </tr>
     </table>
