* Add #num_columns#, #num_rows#, #tile_width#, and #tile_height#

--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -60,10 +60,41 @@ table td
   <div class="component">
     <h3 id="quintessence/Tileo/MeshWithNormals.q.yml">quintessence/Tileo/MeshWithNormals.q.yml</h3>
      <table>
+<tr>
+  <td class="property">num_columns</td>
+  <td class="property">int</td>
+</tr>
+<tr>
+  <td class="property">num_rows</td>
+  <td class="property">int</td>
+</tr>
+<tr>
+  <td class="property">tile_width</td>
+  <td class="property">float</td>
+</tr>
+<tr>
+  <td class="property">tile_height</td>
+  <td class="property">float</td>
+</tr>
+<tr>
+  <td class="property">tile_ids</td>
+  <td class="property">std::vector&lt;int&gt;</td>
+</tr>
+<tr>
+  <td class="property">normal_tile_ids</td>
+  <td class="property">std::vector&lt;int&gt;</td>
+</tr>
+<tr>
+  <td class="property">initialized</td>
+  <td class="property">bool</td>
+</tr>
     </table>
      <table>
 <tr>
-  <td class="method">run()</td>
+  <td class="method">initialize()</td>
+</tr>
+<tr>
+  <td class="method">resize(2)</td>
 </tr>
     </table>
      <table>
