* Add #clear_and_reserve# to MeshWithNormals

--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -105,7 +105,7 @@ table td
   <td class="method">resize(2)</td>
 </tr>
 <tr>
-  <td class="method">clear_and_reserve()</td>
+  <td class="private_method">clear_and_reserve()</td>
 </tr>
     </table>
      <table>
@@ -362,6 +362,9 @@ table td
      <table>
 <tr>
   <td class="method">get_vertex_declaration()</td>
+</tr>
+<tr>
+  <td class="method">build_empty_vertex()</td>
 </tr>
 <tr>
   <td class="method">initialize()</td>
