* Include ALLEGRO_OPENGL flag with test display; Add couts in attempt to capture flaky test

--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -96,10 +96,17 @@ table td
   <td class="property">initialized</td>
   <td class="property">bool</td>
 </tr>
+<tr>
+  <td class="property">destroyed</td>
+  <td class="property">bool</td>
+</tr>
     </table>
      <table>
 <tr>
   <td class="method">initialize()</td>
+</tr>
+<tr>
+  <td class="method">destroy()</td>
 </tr>
 <tr>
   <td class="method">resize(2)</td>
