--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -112,6 +112,9 @@ table td
   <td class="method">resize(2)</td>
 </tr>
 <tr>
+  <td class="private_method">place_vertexes_into_tile_mesh_shape()</td>
+</tr>
+<tr>
   <td class="private_method">clear_and_reserve()</td>
 </tr>
     </table>
