* Add (also untested) #set_normal_tile_uv#

--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -115,6 +115,9 @@ table td
   <td class="method">set_tile_uv(6)</td>
 </tr>
 <tr>
+  <td class="method">set_normal_tile_uv(6)</td>
+</tr>
+<tr>
   <td class="private_method">place_vertexes_into_tile_mesh_shape()</td>
 </tr>
 <tr>
