--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -120,10 +120,13 @@ table td
   <td class="method">resize(2)</td>
 </tr>
 <tr>
-  <td class="method">set_tile_uv(6)</td>
+  <td class="method">set_tile(3)</td>
 </tr>
 <tr>
-  <td class="method">set_normal_tile_uv(6)</td>
+  <td class="private_method">set_tile_uv(6)</td>
+</tr>
+<tr>
+  <td class="private_method">set_normal_tile_uv(6)</td>
 </tr>
 <tr>
   <td class="private_method">place_vertexes_into_tile_mesh_shape()</td>
