--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -156,6 +156,9 @@ table td
 <tr>
   <td class="dependency">{&quot;symbol&quot;=&gt;&quot;std::vector&lt;TILEO_TILE_VERTEX&gt;&quot;, &quot;headers&quot;=&gt;[&quot;vector&quot;, &quot;Tileo/TileoTileVertex.hpp&quot;]}</td>
 </tr>
+<tr>
+  <td class="dependency">{&quot;symbol&quot;=&gt;&quot;AllegroFlare::Random&quot;, &quot;headers&quot;=&gt;[&quot;AllegroFlare/Random.hpp&quot;]}</td>
+</tr>
     </table>
   </div>
 </ul>
@@ -503,6 +506,9 @@ table td
     "Tileo/TileoTileVertexAllegroVertexDeclaration"
   ],
   "std/vector<TILEO_TILE_VERTEX>": [
+    "Tileo/MeshWithNormals"
+  ],
+  "AllegroFlare/Random": [
     "Tileo/MeshWithNormals"
   ],
   "AllegroFlare/Shader": [
