* Achieve correctly-formed working shader

--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -232,6 +232,9 @@ table td
   <td class="method">activate()</td>
 </tr>
 <tr>
+  <td class="method">set_flat_color(2)</td>
+</tr>
+<tr>
   <td class="private_method">obtain_vertex_source()</td>
 </tr>
 <tr>
