--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -235,6 +235,9 @@ table td
   <td class="method">set_flat_color(2)</td>
 </tr>
 <tr>
+  <td class="method">set_light_angle_of_incidence(1)</td>
+</tr>
+<tr>
   <td class="method">set_primary_texture(1)</td>
 </tr>
 <tr>
