* Differentiate some darkened and lightened tile effect

--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -238,6 +238,9 @@ table td
   <td class="method">set_light_angle_of_incidence(1)</td>
 </tr>
 <tr>
+  <td class="method">set_light_spread(1)</td>
+</tr>
+<tr>
   <td class="method">set_primary_texture(1)</td>
 </tr>
 <tr>
