--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -241,6 +241,9 @@ table td
   <td class="method">set_light_spread(1)</td>
 </tr>
 <tr>
+  <td class="method">set_light_attenuation(1)</td>
+</tr>
+<tr>
   <td class="method">set_primary_texture(1)</td>
 </tr>
 <tr>
