* Rename #light_position# to #light_direction#

--- a/documentation/index.htm
+++ b/documentation/index.htm
@@ -235,7 +235,7 @@ table td
   <td class="method">set_flat_color(2)</td>
 </tr>
 <tr>
-  <td class="method">set_light_position(1)</td>
+  <td class="method">set_light_direction(1)</td>
 </tr>
 <tr>
   <td class="method">set_light_spread(1)</td>
